# plot

./: .gitmodules  Cargo.toml  LICENSE_MIT  README.md  build.bat  build.sh
data/: erupt.csv  line.csv
src/: lib.rs
src/graph/: mod.rs  scatter.rs
src/line/: line.rs  mod.rs
src/scatter/: mod.rs  scatter.rs
web/: index.html  index.js
