[package]
name = "plot"
version = "0.1.0"
authors = ["Dion Pinto <dionpinto000@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde-wasm-bindgen = "0.1"
ndarray = {version = "0.15", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4.22"
csv = "1.1"
tera = "1.2.0"
getrandom = { version = "0.2", features = ["js"] }
entropy = {path = "./dependencies/entropy"}


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
